HTTPCORE-201: OSGi Export-Package doesn't specify version
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@801387 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -7,6 +7,9 @@ with naive (broken) implementation of SelectionKey API.
 
 Please note new classes and methods added in the 4.1 branch are still considered API unstable.
 
+* [HTTPCORE-201] OSGi Export-Package to specify release version
+  Contributed by Oleg Kalnichevski <olegk at apache.org> 
+
 * [HTTPCORE-183] Added Thread-safe implementations of HttpParams and HttpProcessor - 
   SyncBasicHttpParams and ImmutableHttpProcessor classes
   Contributed by Oleg Kalnichevski <olegk at apache.org> 
