HTTPCORE-207: SocketHttp*Connection classes can leak sockets if the connection is half-closed Contributed by David Koski <david_koski at mac.com>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@818593 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,8 @@
+Changes since 4.1-ALPHA1
+
+* [HTTPCORE-207] SocketHttp*Connection classes can leak sockets if the connection is half-closed
+  Contributed by David Koski <david_koski at mac.com>
+
 Release 4.1-ALPHA1
 -------------------
 
