HTTPCORE-209: Added parameter to set SO_REUSEADDR on sockets bound to a local address
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@903779 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since 4.1-ALPHA1
 
+* [HTTPCORE-209] Added parameter to set SO_REUSEADDR on sockets bound to a local address.
+  Contributed by Oleg Kalnichevski <olegk at apache.org> 
+
 * [HTTPCORE-207] SocketHttp*Connection classes can leak sockets if the connection is half-closed
   Contributed by David Koski <david_koski at mac.com>
 
