HTTPCORE-218: ChunkEncoder#write method no longer returns incorrect value if the data to write is greater than the size of the internal buffer used by the encoder Contributed by Richie Jefts <rjefts at gmail.com>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@917747 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 Changes since 4.1-ALPHA1
 
+* [HTTPCORE-218] ChunkEncoder#write method no longer returns incorrect value if 
+  the data to write is greater than the size of the internal buffer used by the encoder.
+  Contributed by Richie Jefts <rjefts at gmail.com> 
+
 * [HTTPCORE-209] Added parameter to set SO_REUSEADDR on sockets bound to a local address.
   Contributed by Oleg Kalnichevski <olegk at apache.org> 
 
