--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 Changes since 4.1-ALPHA1
 
+* [HTTPCORE-177] Reduce intermediate data buffering by reading large chunks of data directly from 
+  the underlying socket stream. This results in improved performance of blocking read operations.
+  Contributed by Oleg Kalnichevski <olegk at apache.org> 
+
 * [HTTPCORE-220] IdentityDecoder fails to detect end of stream when using file channels.
   Contributed by Asankha C. Perera <asankha at apache.org> 
 
