HTTPCORE-222: Fixed Import-Package in the OSGi META-INF Contributed by Willem Jiang <willem.jiang at gmail.com>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/branches/4.0.x@925173 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since 4.0.1
 
+* [HTTPCORE-222] Fixed OSGi Import-Package
+  Contributed by Willem Jiang <willem.jiang at gmail.com>
+
 * [HTTPCORE-207] SocketHttp*Connection classes can leak sockets if the connection is half-closed
   Contributed by David Koski <david_koski at mac.com>
 
