ByteArrayBuffer, CharArrayBuffer, BasicHeader, BufferedHeader, HeaderGroup made Serializable
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@940997 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,8 @@
+Changes since 4.1-BETA1 
+
+* ByteArrayBuffer, CharArrayBuffer, BasicHeader, BufferedHeader, HeaderGroup made Serializable.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 Release 4.1-BETA1
 -------------------
 
