HTTPCORE-227: Fixed incorrect request / response count by non-blocking connections Contributed by Harold Lee <harold at hotelling.net>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@953155 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since 4.1-BETA1 
 
+* [HTTPCORE-227] Fixed incorrect request / response count by non-blocking connections.
+  Contributed by Harold Lee <harold at hotelling.net>
+
 * [HTTPCORE-226] Improved compatibility of NIO components with Google Android.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
