Fixed 4.1-beta2 release notes
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@988670 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,4 +1,4 @@
-Changes since 4.1-BETA2
+Release 4.1-BETA2
 -------------------
 
 This is the second BETA release of HttpCore 4.1. This is mainly a bug fix release that addresses
