HTTPCORE-231: Fixed incorrect handling of HTTP entities by non-blocking LengthDelimitedDecoder when the Content-Length value is larger than Integer.MAX_VALUE
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@995221 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,9 @@
+Changes since 4.1-BETA2
+
+* [HTTPCORE-231] Fixed incorrect handling of HTTP entities by non-blocking LengthDelimitedDecoder
+  when the Content-Length value is larger than Integer.MAX_VALUE.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 Release 4.1-BETA2
 -------------------
 
@@ -5,7 +11,7 @@ This is the second BETA release of HttpCore 4.1. This is mainly a bug fix releas
 a number of non-critical bugs.
 
 The most significant change in this release is deprecation of the HttpEntity#consumeContent()
-method and streamlining of connection management and resource deallocation by HTTP entities. 
+method and streamlining of connection management and resource deallocation by HTTP entities.
 Please refer to the javadocs for details.
 
 * [HTTPCORE-229] AbstractSessionInputBuffer#readLine(CharArrayBuffer) returns incorrect
