--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 Changes since 4.0.1
 
+* [HTTPCORE-231] Fixed incorrect handling of HTTP entities by non-blocking LengthDelimitedDecoder
+  when the Content-Length value is larger than Integer.MAX_VALUE.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-229] AbstractSessionInputBuffer#readLine(CharArrayBuffer) returns incorrect 
   number of characters read by the method when using non-standard HTTP element charset.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
