HTTPCORE-236: SSLIOSession#isAppInputReady() does not check the status of the session input buffer. Contributed by Dmitry Lukyanov <dlukyanov at ukr.net>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1001435 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 Changes since 4.1-BETA2
 
+* [HTTPCORE-236]: SSLIOSession#isAppInputReady() does not check the status of the session input
+  buffer.
+  Contributed by Dmitry Lukyanov <dlukyanov at ukr.net>
+
 * [HTTPCORE-233]: EntityUtils#toString() and EntityUtils#toByteArray() to return null if
   HttpEntity#getContent() is null
   Contributed by Oleg Kalnichevski <olegk at apache.org>
