fix HTTPCORE-239 - The ChunkEncoder could request for a negative buffer limit causing an IllegalArgumentException
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1022657 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 Changes since 4.1-BETA2
 
+* [HTTPCORE-239]: The ChunkEncoder could request for a negative buffer limit causing an 
+  IllegalArgumentException.
+  Contributed by Asankha Perera <asankha at apache.org>
+
 * [HTTPCORE-236]: SSLIOSession#isAppInputReady() does not check the status of the session input
   buffer.
   Contributed by Dmitry Lukyanov <dlukyanov at ukr.net>
