HTTPCORE-240: DefaultConnectingIOReactor leaks a socket descriptor if the session request fails
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1030045 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,4 +1,8 @@
-Changes since 4.1-BETA2
+Release 4.1
+-------------------
+
+* [HTTPCORE-240]: DefaultConnectingIOReactor leaks a socket descriptor if the session request fails.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
 
 * [HTTPCORE-239]: The ChunkEncoder could request for a negative buffer limit causing an 
   IllegalArgumentException.
