HTTPCORE-254 Erratic results from metrics
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1092121 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,7 @@
 Changes since 4.1
 
+* [HTTPCORE-254]: Erratic results from metrics (sebb)
+
 * [HTTPCORE-242]: Fixed NPE in AsyncNHttpClientHandler caused by an early response to an
   entity enclosing request.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
