HTTPCORE-255: Fixed resource management in InputStreamEntity#writeTo method
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1096489 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since 4.1
 
+* [HTTPCORE-255]: Fixed resource management in InputStreamEntity#writeTo()
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-254]: Erratic results from metrics (sebb)
 
 * [HTTPCORE-242]: Fixed NPE in AsyncNHttpClientHandler caused by an early response to an
