--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,23 @@
-Changes since 4.1
+Changes since 4.1.1
 -------------------
+
+* [HTTPCORE-257] Fixed incorrect results produced by DefaultConnectionReuseStrategy when handling 
+  response messages whose content entity has been decoded or modified by a protocol interceptor. 
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+Release 4.1.1
+-------------------
+
+This is a patch release that fixes a number of non-critical issues found since release 4.1.
+
+This release marks the end of support for Java 1.3. As of release 4.2 HttpCore will require 
+Java 1.5 for all its components. 
+
+Please note that several classes and methods deprecated between versions 4.0-beta1 and 4.0 GA 
+(more than two years ago) will also be removed in the 4.2 branch.
+
+Users of 4.0.x versions are advised to upgrade and replace deprecated API calls following
+recommendations in javadocs.  
 
 * In case of an unexpected end of stream condition (the peer closed connection prematurely) 
   truncated Content-Length delimited message bodies will cause an I/O exception. Application
