--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,21 @@
-Changes since 4.1.3
+Release 4.2-ALPHA1
 -------------------
+
+This is the first ALPHA release of 4.2. The most notable feature included in this release is 
+support for connection pools of blocking and non-blocking HTTP connections. Connection pool 
+components are based on mature code migrated from HttpClient and HttpAsyncClient modules but have 
+a slightly different API that makes a better use of Java standard concurrent primitives. 
+
+Support for connection pools in HttpCore is expected to make development of client and proxy HTTP
+services easier and less error prone.
+
+Please note that new features included in this release are still considered experimental and 
+their API may change in the future ALPHA releases. This release also marks the end of support for 
+Java 1.3. As of this release HttpCore requires Java 1.5 for all its components. Several classes and 
+methods deprecated between versions 4.0-beta1 and 4.0 GA (more than two years ago) have been 
+removed in this release.
+
+Bug fixes:
 
 * [HTTPCORE-268] Handle runtime exceptions thrown by SSLEngine.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
