--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 Changes since 4.2-ALPHA1  
 
+* [HTTPCORE-270] Fixed IllegalStateException in AbstractSessionOutputBuffer and 
+  AbstractSessionInputBuffer.
+  Contributed by William R. Speirs <bill.speirs at gmail.com>
+
 * [HTTPCORE-269] Connection pools incorrectly handle lease requests when the max limit for the given 
   route has been exceeded and all connections in the route pool are stateful.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
