--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,4 +1,26 @@
-Changes since 4.2-ALPHA1  
+Release 4.2-ALPHA2
+-------------------
+
+This is the second ALPHA release of HttpCore 4.2. This release comes with completely redesigned 
+and rewritten asynchronous protocol handlers. New protocol handling API used in conjunction with 
+connection pooling components introduced in the previous ALPHA release is expected to make 
+development of asynchronous HTTP client agents and HTTP proxies easier and less error prone.
+
+Sample application shipped with the release include an example of an HTTP file server capable of 
+direct channel (zero copy) data transfer and an example of a non-blocking, fully streaming reverse 
+proxy.  
+
+We are kindly asking existing and prospective users of HttpCore to review and try out the
+new protocol handlers and give us feedback while the 4.2 API is still not final. If no major flaws 
+are discovered the 4.2 API is expected to be frozen with the next BETA release. 
+
+Please note that new features included in this release are still considered experimental and 
+their API may change in the future ALPHA releases. This release also marks the end of support for 
+Java 1.3. As of this release HttpCore requires Java 1.5 for all its components. Several classes and 
+methods deprecated between versions 4.0-beta1 and 4.0 GA (more than two years ago) have been 
+removed in this release.
+
+Bug fixes:
 
 * [HTTPCORE-270] Fixed IllegalStateException in AbstractSessionOutputBuffer and 
   AbstractSessionInputBuffer.
