--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,13 +1,17 @@
 Changes since 4.1.3
 -------------------
 
+* [HTTPCORE-286] Canceled I/O session can cause an IllegalStateException in BaseIOReactor#validate
+  leading to an abnormal termination of the I/O reactor.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-257] Fixed incorrect results produced by DefaultConnectionReuseStrategy when handling 
   response messages whose content entity has been decoded or modified by a protocol interceptor. 
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
 * [HTTPCORE-283] Workaround for a bug causing termination of the I/O reactor in case of exception 
   thrown by NHttpServiceHandler#requestReceived or NHttpClientHandler#responseReceived
-  methods. A more comprehensive fix for the bug applied to the (4.2 branch).
+  methods. A more comprehensive fix for the bug applied to the 4.2 branch.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
 * [HTTPCORE-281] ResponseConnControl protocol interceptor does not correctly populate connection
